Fix Editor's sidebar icon alignment for both Database and Builder

--- a/web-frontend/modules/core/assets/scss/components/builder/side_bar.scss
+++ b/web-frontend/modules/core/assets/scss/components/builder/side_bar.scss
@@ -1,4 +1,10 @@
-/** Only display ellipsis when the user is *not* editing the page name in-place */
-.side-bar-builder__link-text:not([contenteditable='true']) {
-  @extend %ellipsis;
+.side-bar-builder__link-text {
+  // Ensure the page name takes up all the available space.
+  flex: 1;
+
+  // Only display ellipsis when the user *isn't* editing the page
+  // name in-place.
+  &:not([contenteditable='true']) {
+    @extend %ellipsis;
+  }
 }
